fix: Added pinned pip package - Added base requirements.in with pip - Created base requirements.txt with pip pinned by hash - Recreated requirements.txt with --allow-unsafe to get correct setuptools - Updated feluda core dockerfile to install pip using base requirements - Updated ci test dockerfile to install pip using base requirements - Updated all benchmark dockerfiles to install pip using base requirements - Updated all worker dockerfiles to install pip using base requirements - Updated readme pip install and pip-compile commands

--- a/src/worker/hash/Dockerfile.hash_worker
+++ b/src/worker/hash/Dockerfile.hash_worker
@@ -25,11 +25,12 @@ RUN python -m venv /home/python/app/venv \
 # Set venv in path
 ENV PATH="/home/python/app/venv/bin:$PATH"
 
-# Copy core and operator requirements
+# Copy base, core and operator requirements
+COPY --chown=python:python base_requirements.txt /home/python/app/base_requirements.txt
 COPY --chown=python:python requirements.txt /home/python/app/requirements.txt
 
 # Run pip install
-RUN pip install --no-cache-dir --upgrade pip \
+RUN pip install --no-cache-dir --require-hashes --no-deps -r /home/python/app/base_requirements.txt \
     && pip install --no-cache-dir --require-hashes --no-deps -r /home/python/app/requirements.txt
 
 #####################################
