--- a/src/benchmark/imgvec/Dockerfile.image_vec_rep_resnet
+++ b/src/benchmark/imgvec/Dockerfile.image_vec_rep_resnet
@@ -23,7 +23,10 @@ WORKDIR /usr/app
 RUN python -m venv /usr/app/venv && chown -R python:python /usr/app/venv
 ENV PATH="/usr/app/venv/bin:$PATH"
 
-RUN pip install --no-cache-dir --upgrade pip
+# base requirements file
+COPY --chown=python:python base_requirements.txt /usr/app/base_requirements.txt
+RUN pip install --no-cache-dir --require-hashes --no-deps -r /usr/app/base_requirements.txt
+
 COPY --chown=python:python ./core/operators/image_vec_rep_resnet_requirements.txt /usr/app/core/operators/image_vec_rep_resnet_requirements.txt
 RUN pip install --no-cache-dir --require-hashes --no-deps -r /usr/app/core/operators/image_vec_rep_resnet_requirements.txt
 COPY --chown=python:python ./core/operators/image_vec_rep_resnet.py /usr/app/core/operators/image_vec_rep_resnet.py
