--- a/src/benchmark/vidvec/Dockerfile.vid_vec_rep_resnet_graviton
+++ b/src/benchmark/vidvec/Dockerfile.vid_vec_rep_resnet_graviton
@@ -20,7 +20,9 @@ WORKDIR /usr/app
 RUN python -m venv /usr/app/venv && chown -R python:python /usr/app/venv
 ENV PATH="/usr/app/venv/bin:$PATH"
 
-RUN pip install --no-cache-dir --upgrade pip
+# base requirements file
+COPY --chown=python:python base_requirements.txt /usr/app/base_requirements.txt
+RUN pip install --no-cache-dir --require-hashes --no-deps -r /usr/app/base_requirements.txt
 
 ### AWS Graviton Optimization ###
 
