--- a/.github/workflows/pr-security.yml
+++ b/.github/workflows/pr-security.yml
@@ -32,9 +32,9 @@ jobs:
           python-version: '3.11'
 
       - name: Lint with Ruff
-        run: |
-          pip install ruff==0.3.2
-          ruff --output-format=github ./src/
+        uses: chartboost/ruff-action@e18ae971ccee1b2d7bbef113930f00c670b78da4 # v1.0.0
+        with:
+          src: "./src"
         continue-on-error: false
 
       - name: pip audit install setup 1
