--- a/src/benchmark/audiovec/Dockerfile.audio_vec_embedding
+++ b/src/benchmark/audiovec/Dockerfile.audio_vec_embedding
@@ -50,5 +50,9 @@ RUN apt-get purge -y --auto-remove \
 RUN apt-get update && apt-get install -y --no-install-recommends vim zsh
 RUN apt-get update && apt-get install -y --no-install-recommends wget
 
+# dev requirements file
+COPY --chown=python:python ./benchmark/audiovec/dev_requirements.txt /usr/app/benchmark/audiovec/dev_requirements.txt
+RUN pip install --no-cache-dir --require-hashes --no-deps -r /usr/app/benchmark/audiovec/dev_requirements.txt
+
 USER python:python
 CMD tail -f /dev/null
