--- a/src/worker/media/config.yml
+++ b/src/worker/media/config.yml
@@ -1,34 +1,35 @@
-store :
-  label : "Data Store"
-  type : "es_vec"
+store:
+  label: "Data Store"
+  type: "es_vec"
   parameters:
-    host_name : "es"
-    image_index_name : "image"
-    text_index_name : "text"
-    video_index_name : "video"
-    audio_index_name : "audio"
+    host_name: "es"
+    image_index_name: "image"
+    text_index_name: "text"
+    video_index_name: "video"
+    audio_index_name: "audio"
 
-queue : 
-  label : "Queue"
-  type : "rabbitmq"
-  parameters: 
-    host_name : "rabbitmq"
+queue:
+  label: "Queue"
+  type: "rabbitmq"
+  parameters:
+    host_name: "rabbitmq"
     queues:
-      - name : "video-index-queue"
-      - name : "report-queue"
-      - name : "video-search-queue"
-      - name : "search-result-queue"
+      - name: "media-index-queue"
+      - name: "report-queue"
 
-operators : 
-  label : "Operators"
-  parameters :
-    - name : "Video Vector Representation"
-      type : "vid_vec_rep_resnet"
-      parameters: {
-        index_name : "video"
-      }
-    - name : "Audio Vector Representation"
-      type : "audio_vec_embedding"
-      parameters: {
-        index_name : "audio"
-      }
+operators:
+  label: "Operators"
+  parameters:
+    - name: "Video Vector Representation"
+      type: "vid_vec_rep_resnet"
+      parameters: { index_name: "video" }
+    - name: "Audio Vector Representation"
+      type: "audio_vec_embedding"
+      parameters: { index_name: "audio" }
+
+postgresql:
+  label: "PostgreSQL"
+  type: "postgresql"
+  parameters:
+    table_names:
+      - name: "table_name_1"
