--- a/src/worker/hash/config.yml
+++ b/src/worker/hash/config.yml
@@ -1,3 +1,11 @@
+store:
+  entities:
+    - label: "Postgres Store"
+      type: "postgresql"
+      parameters:
+        table_names:
+          - "user_message_inbox_duplicate"
+
 queue : 
   label : "Queue"
   type : "rabbitmq"
