fix: config-server structure

--- a/src/.env-template
+++ b/src/.env-template
@@ -12,8 +12,8 @@ ES_PASSWORD=XXXXX
 ES_IMG_INDEX=imgsearch
 ES_TXT_INDEX=txtsearch
 ES_VID_INDEX=vidsearch
-WSGI_HOST=XXXXX
-WSGI_DEBUG=XXXXX
+WSGI_HOST=localhost
+WSGI_DEBUG=True
 PG_HOST=postgres
 PG_DB=postgres
 PG_USER=tattle
