--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -128,6 +128,30 @@ jobs:
           push: true
           tags: tattletech/feluda-operator-hash:worker-arm64-${{ needs.release.outputs.tag }}
 
+      - name: Publish media worker amd64 worker to dockerhub
+        uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
+        with:
+          context: "{{defaultContext}}:src/"
+          file: worker/media/Dockerfile.media_worker
+          platforms: linux/amd64
+          build-args: |
+            "UID=1000"
+            "GID=1000"
+          push: true
+          tags: tattletech/feluda-operator-media:worker-amd64-${{ needs.release.outputs.tag }}
+
+      - name: Publish media worker arm64 worker to dockerhub
+        uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0 # v5.3.0
+        with:
+          context: "{{defaultContext}}:src/"
+          file: worker/media/Dockerfile.media_worker_graviton
+          platforms: linux/arm64
+          build-args: |
+            "UID=1000"
+            "GID=1000"
+          push: true
+          tags: tattletech/feluda-operator-media:worker-arm64-${{ needs.release.outputs.tag }}
+
 #      - name: deploy to cluster
 #        uses: steebchen/kubectl@v2.0.0
 #        with: # defaults to latest kubectl binary version
