feat: add `vid_vec_rep_clip` operator
Signed-off-by: Snehil Shah <snehilshah.989@gmail.com>

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -30,8 +30,7 @@ ENV PATH="/usr/app/venv/bin:$PATH"
 COPY --chown=python:python base_requirements.txt /usr/app/base_requirements.txt
 RUN pip install --no-cache-dir --require-hashes --no-deps -r /usr/app/base_requirements.txt
 
-RUN apt-get update && apt-get -y upgrade && apt-get install -y --no-install-recommends vim curl
-RUN apt-get install -y --no-install-recommends ffmpeg
+RUN apt-get update --fix-missing && apt-get -y upgrade && apt-get install -y --no-install-recommends vim curl ffmpeg
 # RUN apt-get update && \
 #     apt-get -y upgrade && \
 #     apt-get install -y tesseract-ocr tesseract-ocr-hin
