fix: enable worker support for dimension reductionn

--- a/src/worker/clustering_media/config.yml
+++ b/src/worker/clustering_media/config.yml
@@ -22,7 +22,7 @@ operators :
     - name: "Clustering"
       type: "cluster_embeddings"
       parameters: {}
-    # - name: "tSNE"
-    #   type: "dimension_reduction"
-    #   parameters: {}
+    - name: "tSNE"
+      type: "dimension_reduction"
+      parameters: {}
 
