--- a/src/core/operators/audio_vec_embedding_requirements.in
+++ b/src/core/operators/audio_vec_embedding_requirements.in
@@ -1,6 +1,7 @@
 numpy==1.26.4
 librosa==0.10.2.post1
 panns-inference==0.1.1
-torch==2.2.0+cpu
-memray==1.12.0
-pyinstrument==4.6.2
+# torch==2.2.0+cpu
+torch==2.4.1
+memray==1.14.0
+pyinstrument==4.7.3
