ci: fix trivy github action

--- a/.github/workflows/pr-security.yml
+++ b/.github/workflows/pr-security.yml
@@ -88,7 +88,7 @@ jobs:
           output: 'trivy-results.sarif'
           limit-severities-for-sarif: true
           severity: 'HIGH,CRITICAL'
-          scanners: 'vuln,config,secret'
+          scanners: 'vuln,misconfig,secret'
           skip-dirs: '.vscode,docs'
           exit-code: '1'
       - name: Upload Trivy scan results to GitHub Security tab
