--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,10 +56,9 @@ services:
     env_file: ./src/development.env
     ports:
       - 7000:7000
-      - 5678:5678
+      # - 5678:5678
       - 8888:8888
-    # command: tail -f /dev/null
-    command: jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root 
+    command: tail -f /dev/null
     depends_on:
       store:
         condition: service_started
@@ -107,3 +106,4 @@ volumes:
 #  default:
 #    external: true
 #    name: kosh-v2_tattle
+
