--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,13 @@ dependencies = [
 ]
 
 [project.packages]
-include = [{from = "src", path = "core"}]
+include = [{from = "src", path = "feluda"}]
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/core"]
+packages = ["src/feluda"]
 
 [tool.uv.workspace]
-members = ["operators/image_vec_rep_resnet"]
+members = ["src/feluda/operators/image_vec_rep_resnet"]
 
 [build-system]
 requires = ["hatchling"]
