--- a/operators/image_vec_rep_resnet/pyproject.toml
+++ b/operators/image_vec_rep_resnet/pyproject.toml
@@ -1,7 +1,6 @@
 [project]
 name = "image-vec-rep-resnet"
 version = "0.1.0"
-readme = "README.md"
 
 requires-python = ">=3.10"
 dependencies = [
@@ -13,9 +12,5 @@ dependencies = [
     "pyinstrument==4.6.2"
 ]
 
-[project.scripts]
-image-vec-rep-resnet = "image_vec_rep_resnet:main"
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+[tool.hatch.build.targets.wheel]
+packages = ["."]
