--- a/operators/image_vec_rep_resnet/pyproject.toml
+++ b/operators/image_vec_rep_resnet/pyproject.toml
@@ -9,8 +9,13 @@ dependencies = [
     "numpy==1.26.3",
     "Pillow==10.3.0",
     "memray==1.12.0",
-    "pyinstrument==4.6.2"
+    "pyinstrument==4.6.2",
 ]
 
 [tool.hatch.build.targets.wheel]
 packages = ["."]
+include = ["image_vec_rep_resnet.py", "__init__.py"]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
