--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,13 @@ dependencies = [
 ]
 
 [project.packages]
-include = [{ from = "src", path = "feluda" }]
+include = [{ from = ".", path = "feluda" }]
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/feluda"]
+packages = ["feluda"]
 
 [tool.uv.workspace]
-members = ["src/feluda/operators/image_vec_rep_resnet"]
+members = ["operators/image_vec_rep_resnet"]
 
 [build-system]
 requires = ["hatchling"]
