--- a/operators/image_vec_rep_resnet/pyproject.toml
+++ b/operators/image_vec_rep_resnet/pyproject.toml
@@ -7,7 +7,7 @@ dependencies = [
     "torch==2.2.0",
     "torchvision==0.17.0",
     "numpy==1.26.3",
-    "Pillow==10.3.0",
+    "pillow==11.0.0",
     "memray==1.12.0",
     "pyinstrument==4.6.2",
 ]
