--- a/operators/image_vec_rep_resnet/pyproject.toml
+++ b/operators/image_vec_rep_resnet/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "image-vec-rep-resnet"
-version = "0.9.0"
+name = "feluda-image-vec-rep-resnet"
+version = "0.1.0"
 
 requires-python = ">=3.10"
 dependencies = [
