feat: refactor feluda api (#438)
* feat: refactor feluda API

* chore: moving feluda and operators to root

* chore: making API more lean

* chore: fixing operator init

* chore: moving operator init

* chore: update pillow version

* fix: operators init

* feat: test for image vec operator

* chore: integration test for image vec operator

* chore: pacakge version

* chore: update image vec operator package name and version

* chore: refactor image vec unit test

* fix: structure of pyproject.toml file

* chore: delete test feluda

* fix: root pyproject.toml file

* chore: update image vec pyproejct.toml

--- a/operators/image_vec_rep_resnet/pyproject.toml
+++ b/operators/image_vec_rep_resnet/pyproject.toml
@@ -1,20 +1,19 @@
 [project]
-name = "image-vec-rep-resnet"
+name = "feluda-image-vec-rep-resnet"
 version = "0.1.0"
-readme = "README.md"
 
 requires-python = ">=3.10"
 dependencies = [
     "torch==2.2.0",
     "torchvision==0.17.0",
     "numpy==1.26.3",
-    "Pillow==10.3.0",
+    "pillow==11.0.0",
     "memray==1.12.0",
-    "pyinstrument==4.6.2"
+    "pyinstrument==4.6.2",
 ]
 
-[project.scripts]
-image-vec-rep-resnet = "image_vec_rep_resnet:main"
+[tool.hatch.build.targets.wheel]
+packages = ["."]
 
 [build-system]
 requires = ["hatchling"]
