--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,14 @@ version = "0.9.0"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "boto3==1.35.16",
-    "dacite==1.8.1",
-    "pydub==0.25.1",
+    "boto3>=1.35.63",
+    "dacite>=1.8.1",
+    "pydub>=0.25.1",
     "pyyaml==6.0.2",
     "requests>=2.32.3",
     "werkzeug==3.0.3",
     "wget==3.2",
-    "toml==0.10.2",
+    "toml>=0.10.2",
 ]
 
 [build-system]
