--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,10 @@ dependencies = [
     "boto3>=1.35.63",
     "dacite>=1.8.1",
     "pydub>=0.25.1",
-    "pyyaml==6.0.2",
+    "pyyaml>=6.0.2",
     "requests>=2.32.3",
-    "werkzeug==3.0.3",
-    "wget==3.2",
+    "werkzeug>=3.1.3",
+    "wget>=3.2",
     "toml>=0.10.2",
 ]
 
