--- a/operators/image_vec_rep_resnet/pyproject.toml
+++ b/operators/image_vec_rep_resnet/pyproject.toml
@@ -1,20 +1,19 @@
 [project]
 name = "feluda-image-vec-rep-resnet"
 version = "0.1.0"
-
 requires-python = ">=3.10"
 dependencies = [
-    "torch==2.2.0",
-    "torchvision==0.17.0",
-    "numpy==1.26.3",
-    "pillow==11.0.0",
-    "memray==1.12.0",
-    "pyinstrument==4.6.2",
+    "torch>=2.5.1",
+    "torchvision>=0.20.1",
+    "numpy>=2.1.3",
+    "pillow>=11.0.0",
+    "memray>=1.14.0",
+    "pyinstrument>=5.0.0",
 ]
-
-[tool.hatch.build.targets.wheel]
-packages = ["."]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["."]
