--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,23 +2,17 @@
 name = "feluda"
 version = "0.9.0"
 readme = "README.md"
-
 requires-python = ">=3.10"
 dependencies = [
-    "boto3==1.35.16",
-    "dacite==1.8.1",
-    "pydub==0.25.1",
-    "pyyaml==6.0.2",
+    "boto3>=1.35.63",
+    "dacite>=1.8.1",
+    "pydub>=0.25.1",
+    "pyyaml>=6.0.2",
     "requests>=2.32.3",
-    "werkzeug==3.0.3",
-    "wget==3.2",
+    "werkzeug>=3.1.3",
+    "wget>=3.2",
+    "toml>=0.10.2",
 ]
-
-[tool.hatch.build.targets.wheel]
-packages = ["feluda"]
-
-[tool.uv.workspace]
-members = ["operators/image_vec_rep_resnet"]
 
 [build-system]
 requires = ["hatchling"]
@@ -32,6 +26,12 @@ assets = [
     "src/worker/hash/Dockerfile.hash_worker",
 ]
 
+[tool.uv.workspace]
+members = ["operators/image_vec_rep_resnet"]
+
 [tool.semantic_release.branches.main]
 match = "main"
 prerelease = false
+
+[tool.hatch.build.targets.wheel]
+packages = ["feluda"]
