--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,20 +11,17 @@ dependencies = [
     "requests>=2.32.3",
     "werkzeug>=3.1.3",
     "wget>=3.2",
-    "toml>=0.10.2",
 ]
+
+[project.optional-dependencies]
+dev = ["python-semantic-release>=9.14.0", "toml>=0.10.2"]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.semantic_release]
-version_variable = ["src/__init__.py:__version__"]
-assets = [
-    "src/worker/vidvec/Dockerfile.video_worker",
-    "src/worker/audiovec/Dockerfile.audio_worker",
-    "src/worker/hash/Dockerfile.hash_worker",
-]
+version_variable = ["pyproject.toml:version"]
 
 [tool.uv.workspace]
 members = ["operators/image_vec_rep_resnet"]
