chore: fix set-output warning

--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -54,7 +54,7 @@ jobs:
           echo "Modified packages: $modified_packages"
 
           # Set output for modified packages
-          echo "::set-output name=packages::$modified_packages"
+          echo "packages=$modified_packages" >> $GITHUB_OUTPUT
 
 # jobs:
 #   release:
