--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -43,13 +43,13 @@ jobs:
         run: |
           # Print the base and head SHAs
           echo "Base SHA: ${{ github.event.pull_request.base.sha }}"
-          echo "Head SHA: ${{ github.event.pull_request.head.sha }}
-          
+          echo "Head SHA: ${{ github.event.pull_request.head.sha }}"
+
           # Initialize an empty list for modified packages
           modified_packages=""
 
           # Loop through each modified file
-          for file in $(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }}); do
+          for file in $(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -E '^feluda/|^operators/'); do
             # Check if the file is inside the feluda/ directory
             if [[ "$file" == feluda/* ]]; then
               modified_packages+="feluda "
