--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -39,6 +39,62 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
+  version_bump:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.1.1
+        with:
+          fetch-depth: 0
+          persist-credentials: false
+
+      - name: Check for changes in feluda
+        id: check_feluda
+        run: |
+          CHANGES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} -- feluda)
+          if [ -n "$CHANGES" ]; then
+            echo "Changes detected in feluda"
+            echo "has_changes=true" >> $GITHUB_OUTPUT
+          else
+            echo "No changes in feluda"
+            echo "has_changes=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Check for changes in operators/image_vec_rep_resnet
+        id: check_image_vec_rep_resnet
+        run: |
+          CHANGES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} -- operators/image_vec_rep_resnet)
+          if [ -n "$CHANGES" ]; then
+            echo "Changes detected in operators/image_vec_rep_resnet"
+            echo "has_changes=true" >> $GITHUB_OUTPUT
+          else
+            echo "No changes in operators/image_vec_rep_resnet"
+            echo "has_changes=false" >> $GITHUB_OUTPUT
+          fi
+
+      # - name: Setup Python version
+      #   uses: actions/setup-python@v5.0.0
+      #   with:
+      #     python-version: '3.11'
+
+      # - name: Install semantic-release
+      #   run: |
+      #     pip install python-semantic-release
+
+      - name: Release feluda
+        if: steps.check_feluda.outputs.has_changes == 'true'
+        uses: python-semantic-release/python-semantic-release@v9.12.0
+        with:
+          directory: ./
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Release image_vec_rep_resnet
+        if: steps.check_image_vec_rep_resnet.outputs.has_changes == 'true'
+        uses: python-semantic-release/python-semantic-release@v9.12.0
+        with:
+          directory: ./operators/image_vec_rep_resnet
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
   docker:
     needs: release
     if: needs.release.outputs.released == 'true'
